# game-of-life

./: CMakeLists.txt
include/: board.h  cells.h  gol.h  rules.h
src/: board.c  cells.c  gol.c  rules.c
